// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout header component should render with default props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="govuk-header "
        data-module="header"
        role="banner"
      >
        <div
          class="govuk-header__container govuk-width-container"
        >
          <div
            class="govuk-header__container govuk-width-container"
          >
            <div
              class="govuk-header__logo"
            >
              <span
                class="govuk-header__logotype"
              >
                <a
                  class="govuk-header__link govuk-header__link--homepage govuk-header__logotype-text"
                  href="/"
                >
                  Correspondence Service
                </a>
              </span>
            </div>
            <div
              class="govuk-header__content"
            >
              <nav>
                <ul
                  aria-label="Top Level Navigation"
                  class="govuk-header__navigation "
                  id="navigation"
                >
                  <li
                    class="govuk-header__navigation--end"
                  >
                    <a
                      class="govuk-header__link"
                      href="/oauth/logout"
                    >
                      Log out
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      class="govuk-header "
      data-module="header"
      role="banner"
    >
      <div
        class="govuk-header__container govuk-width-container"
      >
        <div
          class="govuk-header__container govuk-width-container"
        >
          <div
            class="govuk-header__logo"
          >
            <span
              class="govuk-header__logotype"
            >
              <a
                class="govuk-header__link govuk-header__link--homepage govuk-header__logotype-text"
                href="/"
              >
                Correspondence Service
              </a>
            </span>
          </div>
          <div
            class="govuk-header__content"
          >
            <nav>
              <ul
                aria-label="Top Level Navigation"
                class="govuk-header__navigation "
                id="navigation"
              >
                <li
                  class="govuk-header__navigation--end"
                >
                  <a
                    class="govuk-header__link"
                    href="/oauth/logout"
                  >
                    Log out
                  </a>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Layout header component should render without crest when service is not GOV.UK 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="govuk-header "
        data-module="header"
        role="banner"
      >
        <div
          class="govuk-header__container govuk-width-container"
        >
          <div
            class="govuk-header__container govuk-width-container"
          >
            <div
              class="govuk-header__logo"
            >
              <span
                class="govuk-header__logotype"
              >
                <a
                  class="govuk-header__link govuk-header__link--homepage govuk-header__logotype-text"
                  href="/"
                >
                  Test Service
                </a>
              </span>
            </div>
            <div
              class="govuk-header__content"
            >
              <nav>
                <ul
                  aria-label="Top Level Navigation"
                  class="govuk-header__navigation "
                  id="navigation"
                >
                  <li
                    class="govuk-header__navigation--end"
                  >
                    <a
                      class="govuk-header__link"
                      href="/oauth/logout"
                    >
                      Log out
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      class="govuk-header "
      data-module="header"
      role="banner"
    >
      <div
        class="govuk-header__container govuk-width-container"
      >
        <div
          class="govuk-header__container govuk-width-container"
        >
          <div
            class="govuk-header__logo"
          >
            <span
              class="govuk-header__logotype"
            >
              <a
                class="govuk-header__link govuk-header__link--homepage govuk-header__logotype-text"
                href="/"
              >
                Test Service
              </a>
            </span>
          </div>
          <div
            class="govuk-header__content"
          >
            <nav>
              <ul
                aria-label="Top Level Navigation"
                class="govuk-header__navigation "
                id="navigation"
              >
                <li
                  class="govuk-header__navigation--end"
                >
                  <a
                    class="govuk-header__link"
                    href="/oauth/logout"
                  >
                    Log out
                  </a>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
